--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,9 @@
         "chrono": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "__tree": "cpp",
+        "queue": "cpp",
+        "set": "cpp"
     }
 }
